--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,54 @@
 .header {
     width: 100%;
     height: 50px;
-    background-color: gainsboro;
+    background: linear-gradient(to right, #79cbb8 45%, #500472 100%);
+    color: white;
 }
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 50px;
 
+}
+
+.active {
+    border-bottom: 2px solid white;
+    padding: 5px;
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+.navbar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar_serveses {
+    position: relative;
+}
+.drop_down__menu {
+    display: none;
+    background: #79CBB8FF;
+    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);*/
+    box-shadow: 8px 6px 10px rgba(0, 0, 0, 0.5);
+    padding: 5px 9px 11px 9px;
+    width: 172px;
+    position: absolute;
+    box-sizing: border-box;
+}
+.navbar_serveses:hover .drop_down__menu {
+    display: block;
+}
+.drop_down__item {
+    padding: 5px 0;
+    border-bottom: 1px solid #500472FF;
+}
+.login_pozition {
+    background: #510c76;
+    top: 100%;
+    right: 2%;
+    width: 135px;
 }
