pagination in product

--- a/src/components/pagination/Pagination.css
+++ b/src/components/pagination/Pagination.css
@@ -18,7 +18,7 @@
 
 .activePage {
     margin: 10px 5px;
-    background-color: green;
+    background-color: #79CBB8FF;
     color: #500472FF;
     font-size: 20px;
     height: 30px;
