--- a/src/components/productsPage/ProductsPage.css
+++ b/src/components/productsPage/ProductsPage.css
@@ -10,6 +10,7 @@
 .product-menu {
     /*height: 600px;*/
     width: 20%;
+    padding-top: 15px;
     /*background-color: #a5e3d4;*/
 }
 .padding {
