--- a/src/components/productsPage/ProductsPage.css
+++ b/src/components/productsPage/ProductsPage.css
@@ -24,6 +24,10 @@
     color: #500472;
     cursor: pointer;
 }
+.category:hover,
+.category.active {
+    border-color: red;
+}
 
 .row {
     width: 80%;
