--- a/src/components/pagination/Pagination.css
+++ b/src/components/pagination/Pagination.css
@@ -3,29 +3,32 @@
     justify-content: center;
     align-items: center;
 }
-.page {
-    margin: 10px 5px;
-    background-color: white;
-    color: #500472FF;
-    font-size: 20px;
-    height: 30px;
-    width: 30px;
-    text-align: center;
-    cursor: pointer;
-    border: 2px solid #79CBB8FF;
-    border-radius: 5px;
+.pagination {
+    margin: 15px auto;
+    display: flex;
+    list-style: none;
+    outline: none;
 }
-
-.activePage {
-    margin: 10px 5px;
-    background-color: #79CBB8FF;
-    color: #500472FF;
-    font-size: 20px;
-    height: 30px;
-    width: 30px;
-    text-align: center;
-    cursor: pointer;
-    border: 2px solid #79CBB8FF;
-    border-radius: 5px;
+.pagination > .active > a{
+    background-color: #79CBB8FF ;
+    border-color: #79CBB8FF ;
+    color: #fff;
 }
-
+.pagination > li > a{
+    border-radius: 5px;
+    /*border: 1px solid #79CBB8FF ;*/
+    padding: 5px 10px;
+    outline: none;
+    cursor: pointer;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+    background-color: #500472FF ;
+    border-color: #79CBB8FF;
+    outline: none ;
+}
+.pagination > li > a, .pagination > li > span{
+    color: #79CBB8FF
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+    border-radius: unset
+}
