--- a/src/components/productCart/ProductCart.css
+++ b/src/components/productCart/ProductCart.css
@@ -50,17 +50,16 @@ button {
     color: #500472FF;
     height: 20px;
     width: 20px;
+    transition: color, transform 500ms ease;
+}
+.icon_basket:hover{
+    transform: scale(1.5);
 }
 span {
     font-weight: bold;
 }
-.input-count {
-    width: 30px;
-    border: none;
-    border-bottom: #500472FF solid 3px;
-    margin: 0 3px 0 20px;
-}
-.input-count:focus {
-    outline: none;
-    transform: scale(1.01);
+.count {
+    font-size: 20px;
+    color: #500472FF;
+    cursor: pointer;
 }
