--- a/src/components/basket/BasketPage.css
+++ b/src/components/basket/BasketPage.css
@@ -3,6 +3,9 @@
     border: 2px solid #79CBB8FF;
     border-radius: 5px;
     padding: 10px;
+
+}
+.flex_space_between {
     display: flex;
     justify-content: space-between;
 }
@@ -21,4 +24,78 @@
 }
 .summaProduct {
     margin-right: 30px;
+}
+.data_name {
+    font-weight: 700;
+    border-bottom: 3px solid #500472FF;
+    margin: 0 20px 10px 20px;
+    font-size: 20px;
+}
+.data_div {
+    margin: 0 20px 0 20px;
+    color: #500472FF;
+}
+.update {
+    color: white;
+    border-radius: 50px;
+    width: 100px;
+    margin-right: 30px;
+    height: 30px;
+}
+.data_input {
+    width: 94%;
+}
+.d_flex {
+    display: flex;
+    justify-content: center;
+}
+.save {
+    width: 450px;
+    margin-left: 60px;
+}
+.label_input {
+    position: relative;
+    top: 12px;
+}
+.label_input_last {
+    position: relative;
+    top: 25px;
+    visibility: visible;
+}
+.btn_last {
+    margin-bottom: 20px;
+    border: 2px solid #500472FF;
+}
+.success_byu {
+    visibility: visible;
+    font-size: 20px;
+    margin-right: 30px;
+}
+.not_success {
+    visibility: hidden;
+}
+.byu_ok {
+    position: relative;
+    top: 5px;
+}
+.modal_content_basket {
+    width: 80%;
+    padding: 10px 20px;
+    border-radius: 12px;
+    background-color: white;
+    transform: scale(0.5);
+    transition: 0.4s all;
+    color: #510c76;
+}
+.modal_content_basket.active {
+    transform: scale(1);
+}
+.roww {
+    width: 80%;
+}
+/* Очистить поплавки после столбцов */
+.roww:after {
+
+    display: table;
+    clear: both;
 }
