--- a/src/components/countProduct/Count.css
+++ b/src/components/countProduct/Count.css
@@ -11,6 +11,8 @@
 .count_box {
     width: 40px;
     height: 30px;
+    bottom: 7px;
+    position: relative;
 }
 
 .count_input {
@@ -28,4 +30,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 9px;
+}
+.count_down {
+    position: relative;
 }
