--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 50px;
-    background: linear-gradient(to right, #79cbb8 45%, #500472 100%);
+    background: linear-gradient(to right, #79cbb8 45%, #47008e 100%);
     color: white;
 }
 .navbar {
@@ -28,11 +28,11 @@ a {
 
 .navbar_serveses {
     position: relative;
+    cursor: pointer;
 }
 .drop_down__menu {
     display: none;
     background: #79CBB8FF;
-    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);*/
     box-shadow: 8px 6px 10px rgba(0, 0, 0, 0.5);
     padding: 5px 9px 11px 9px;
     width: 172px;
@@ -44,10 +44,13 @@ a {
 }
 .drop_down__item {
     padding: 5px 0;
-    border-bottom: 1px solid #500472FF;
+    border-bottom: 1px solid #47008e;
+}
+.drop_down__item:hover {
+    transform: scale(1.1);
 }
 .login_pozition {
-    background: #510c76;
+    background: linear-gradient(to right, #5c56a0 45%, #522c97 100%);
     top: 100%;
     right: 2%;
     width: 135px;
