--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .wrap {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
 }
 /*.app {*/
 /*    flex-grow: 1;*/
