--- a/src/components/ analysis/Analyze.css
+++ b/src/components/ analysis/Analyze.css
@@ -21,9 +21,10 @@ h4 {
     width: 93%;
 }
 .btn_analyz {
-    width: 20%;
+    width: fit-content;
     border-radius: 5px;
     height: 30px;
     margin-top: 10px;
     color: white;
+    padding: 5px;
 }
