--- a/src/components/loginingForm/LoginingForm.css
+++ b/src/components/loginingForm/LoginingForm.css
@@ -1,29 +1,44 @@
-.autorization {
+.form {
     display: flex;
     flex-direction: column;
     width: 500px;
     align-items: center;
-    background-color: #e8dbdb;
+    background-color: white;
     border-radius: 20px;
     padding: 30px;
     align-self: center;
     margin-top: 150px;
 }
-.autorization_header {
+.border {
+    border: 5px solid #79cbb8;
+    box-shadow: 5px -6px 8px 0 rgb(0 0 0 / 20%);
+}
+.form_header {
     font-size: 30px;
     font-weight: 700;
+    color: #47008e;
 }
-.autorization_btn {
+.form_btn {
     border: none;
-    background-color: #3b3bd2;
-    border-radius: 8px;
+    background-color: #47008e;
+    border-radius: 5px;
     color: white;
     font-weight: 700;
     padding: 5px 10px;
     align-self: flex-end;
     margin-top: 10px;
+    height: 30px;
 }
 .flex {
     display: flex;
     justify-content: center;
+}
+.flex_end{
+    position: relative;
+    left: 210px;
+    border-radius: 5px;
+    background-color: #e8dbdb;
+}
+.left {
+    left: 53%
 }
