--- a/src/components/registration/Registration.css
+++ b/src/components/registration/Registration.css
@@ -3,23 +3,38 @@
     flex-direction: column;
     width: 500px;
     align-items: center;
-    background-color: #e8dbdb;
+    background-color: white;
     border-radius: 20px;
     padding: 30px;
     align-self: center;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 .registration_header {
     font-size: 30px;
     font-weight: 700;
+    color: #47008e;
 }
 .registration_btn {
     border: none;
-    background-color: #3b3bd2;
-    border-radius: 8px;
+    background-color: #47008e;
+    border-radius: 5px;
     color: white;
     font-weight: 700;
     padding: 5px 10px;
     align-self: flex-end;
     margin-top: 10px;
+    height: 30px;
+}
+.flex {
+    display: flex;
+    justify-content: center;
+}
+.flex_end{
+    position: relative;
+    left: 210px;
+    border-radius: 5px;
+    background-color: #e8dbdb;
+}
+.left {
+    left: 53%
 }
