--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.wrap {
-    width: 100%;
-    display: flex;
-    /*flex-direction: column;*/
-}
+/*.wrap {*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    !*flex-direction: column;*!*/
+/*}*/
 /*.app {*/
 /*    flex-grow: 1;*/
 /*    background: red;*/
