--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -1,6 +1,8 @@
 .div-btn {
     display: flex;
     justify-content: center;
+    padding-top: 2px;
+    margin: 0 15px;
 }
 .del {
     visibility: hidden;
@@ -21,9 +23,6 @@
     color: white;
     font-weight: 700;
     font-size: 20px;
-}
-.first {
-    padding-top: 20px;
 }
 .close {
     position: relative;
