--- a/src/components/orders/Orders.css
+++ b/src/components/orders/Orders.css
@@ -4,7 +4,7 @@
     padding: 10px;
     width: 93%;
     height: 100%;
-    margin: 20px 0 20px 40px;
+    margin: 20px 0 20px 43px;
     border-radius: 5px;
     font-weight: 700;
     font-size: 20px;
@@ -16,6 +16,7 @@
 }
 .filter {
     padding: 0;
+    margin-top: 26px;
 }
 .justify-content-around {
     display: flex;
