--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,8 +4,26 @@
     /*left: 0;*/
 
     width: 100%;
-    height: 50px;
+    height: 4vw;
     background: #79cbb8;
     color: white;
     flex-shrink: 0;
+}
+.footer-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer-center {
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5vw;
+}
+.footer-icon {
+    font-size: 3vw;
+}.footer-time {
+    font-size: 1vw;
+ }
+.logo {
+    margin: 0.5vw 0.5vw 0 0;
 }
