--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 50px;
-    background: linear-gradient(to right, #79cbb8 45%, #47008e 100%);
+    background: linear-gradient(to right, #78c9b8 46%, #47008e 100%);
     color: white;
 }
 .navbar {
@@ -9,7 +9,20 @@
     justify-content: space-around;
     align-items: center;
     height: 50px;
-
+}
+.navbar-logo {
+    display: flex;
+    justify-content: center;
+}
+.navbar-logo-img {
+    width: 3vw;
+    height: 3vw;
+    margin: 0.5vw;
+}
+.navbar-logo-p {
+    font-family: 'Lobster', cursive;
+    margin-left: -10px;
+    font-size: 3vw;
 }
 
 .active {
@@ -29,6 +42,7 @@ a {
 .navbar_serveses {
     position: relative;
     cursor: pointer;
+    z-index: 2;
 }
 .drop_down__menu {
     display: none;
