--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+  /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+  /*  sans-serif;*/
+  /*-webkit-font-smoothing: antialiased;*/
+  /*-moz-osx-font-smoothing: grayscale;*/
 
+
+  font-family: 'Ledger', serif;
 
   /*display: flex;*/
   /*flex-direction: column;*/
@@ -17,4 +22,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.all-container {
+  max-width: 100%;
+  /*margin: 0 auto;*/
+
+}
+.wr {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.main {
+  /*padding: 30px;*/
+  flex: 1 1 auto;
 }
